--- a/src/components/Message.module.css
+++ b/src/components/Message.module.css
@@ -5,8 +5,6 @@ margin-bottom: 20px;
 }
 .owner {
     flex-direction: row-reverse;
-   
-   
 }
 
 .messageInfo{
@@ -25,9 +23,15 @@ margin-bottom: 20px;
    max-width: 80%; 
    display: flex;
    flex-direction: column;
-    align-items: flex-end;
    gap: 10px;
 }
+
+.messageContentOwner {
+    max-width: 80%; 
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+ }
 .messageContent p {
     background-color: #455d7a;
     color: #e3e3e3;
@@ -42,6 +46,12 @@ margin-bottom: 20px;
     border-radius: 10px 0 10px 10px;
     max-width: max-content;
 }
+.messageContentOwner img{
+    margin-left: 50%;
+    width: 50%;
+    border-radius: 10px;
+}
 .messageContent img{
     width: 50%;
+    border-radius: 10px;
 }
