--- a/src/pages/Register.module.css
+++ b/src/pages/Register.module.css
@@ -20,7 +20,7 @@
 .logo {
    
     font-weight: bold;
-    font-size: 24px;
+    font-size: 15px;
 
 }
 .title {
@@ -52,6 +52,10 @@
     font-weight: bold;
     padding: 10px;
     cursor: pointer;
+}
+.formWrapper form button:hover {
+    background-color: #f95959e0;
+
 }
 .formWrapper p {
     font-size: 12px;
